clusters/gw/apps/app/pocketid/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pocketid
  name: pocketid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pocketid
  template:
    metadata:
      labels:
        app: pocketid
    spec:
      containers:
        - image: ghcr.io/pocket-id/pocket-id:v2
          name: pocketid
          imagePullPolicy: Always
          volumeMounts:
            - name: pocketid-data
              mountPath: /app/data
          livenessProbe:
            exec:
              command:
                - /app/pocket-id
                - healthcheck
            initialDelaySeconds: 10
            periodSeconds: 90
            timeoutSeconds: 5
            failureThreshold: 2
      volumes:
        - name: pocketid-data
          persistentVolumeClaim:
            claimName: pocketid
