clusters/gw/apps/app/pocketid/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocketid
spec:
  parentRefs:
    - name: gw-apps
      sectionName: pocketid-https
  hostnames:
    - "${POCKETID_VHOST}"
  rules:
    - backendRefs:
        - name: pocketid
          namespace: apps
          port: 80
